Fixed Overflow Issues

--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@
 }
 img{
     width:100%;
-    max-width:500px;    
+    max-width:500px;  
+    object-fit: contain;  
 }
 
 .main{
     margin-top: 140px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .main__text{
